finalize ims mzml import